# arkk

./: Cargo.toml
.config/: cargo.toml
.zed/: settings.json
src/: main.rs  panic.rs
src/devices/: display.rs
src/graphical/: console.rs  framebuffer.rs
src/panic/: errors.rs  idt.rs
