[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11.15"
embedded-graphics = "0.8.2"
format_no_std = "1.2.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = { version = "0.10.0", features = ["spin_mutex"] }
uart_16550 = "0.5.0"
x86_64 = "0.15.4"
